@@ -196,7 +196,10 @@ class Intervention(MapEntityMixin, AltimetryMixin, TimeStampedModel, StructureRe
 
     @property
     def name_display(self):
-        return u'<a data-pk="%s" href="%s" >%s</a>' % (self.pk, self.get_detail_url(), self.name)
+        return u'<a data-pk="%s" href="%s" title="%s" >%s</a>' % (self.pk,
+                                                                  self.get_detail_url(),
+                                                                  self.name,
+                                                                  self.name)
 
     @property
     def name_csv_display(self):
@@ -390,7 +393,10 @@ class Project(MapEntityMixin, TimeStampedModel, StructureRelated, NoDeleteMixin)
 
     @property
     def name_display(self):
-        return u'<a data-pk="%s" href="%s" >%s</a>' % (self.pk, self.get_detail_url(), self.name)
+        return u'<a data-pk="%s" href="%s" title="%s">%s</a>' % (self.pk,
+                                                                 self.get_detail_url(),
+                                                                 self.name,
+                                                                 self.name)
 
     @property
     def name_csv_display(self):
